correct date functions

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,6 +40,7 @@
                 <button id='search'>SZUKAJ</button>
             </div>
             <div id='productsContent' class='tableBG'></div>
+            <button id="nextBtt">Next 20 records</button><button id="prevBtt">Previous 20 records</button>
         </div>
         <div id="floatingWindows" class="fwind"></div>
     </body>
